--- a/src/app/components/pages/games/math-ladder/math-ladder.component.html
+++ b/src/app/components/pages/games/math-ladder/math-ladder.component.html
@@ -18,7 +18,7 @@
       <div class="ladder">
         <img src="images/math-stairs/Stairs.png" alt="échelle">
         <!-- Étoile au sommet -->
-        <img class="star" src="images/star.png" alt="étoile">
+        <img class="star" src="images/math-stairs/star.png" alt="étoile">
         <!-- Personnage -->
         <img class="boy"
              [style.--p]="marche() / totalMarches"
