--- a/src/app/components/pages/learning/stories/banane/banane.component.html
+++ b/src/app/components/pages/learning/stories/banane/banane.component.html
@@ -144,7 +144,7 @@
         <!-- footer -->
 
     </div>
-    <app-home-footer [color]="'#B68455'"></app-home-footer>
+    <app-home-footer [color]="'#B68455'" class="footer"></app-home-footer>
 </div>
 
 
