--- a/src/app/components/pages/home/home-footer/home-footer.component.css
+++ b/src/app/components/pages/home/home-footer/home-footer.component.css
@@ -69,12 +69,11 @@
     color: white;
     font-size: clamp(13px, 1.5vw, 15px);
     transition: all 0.3s ease;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: transparent;
 }
 
 .links .link:hover {
-    background-color: white;
-    color: #006aff;
+    background-color: rgba(255, 255, 255, 0.233);
     transform: translateY(-2px);
     cursor: pointer;
 }
@@ -100,8 +99,7 @@
 }
 
 .social-link:hover {
-    background-color: white;
-    color: #006aff;
+    background-color:rgba(255, 255, 255, 0.233);
     transform: scale(1.1);
 }
 
