--- a/src/app/components/pages/learning/stories/brocoli/brocoli.component.css
+++ b/src/app/components/pages/learning/stories/brocoli/brocoli.component.css
@@ -119,7 +119,7 @@ body {
 
 
 .cover-title .btn {
-    width: 30%;
+   width: 38%;
     height: 5%;
     background-color: #81BEAE;
     color: white;
@@ -206,13 +206,13 @@ body {
     position: relative;
     width: 100%;
     /* height: 100vh; */
-    animation: appearSection 1s linear;
+    /* animation: appearSection 1s linear; */
     animation-timeline: view();
     animation-range: entry cover 50%;
     scroll-snap-align: start;
 }
 
-.section img:not(.muscle1, .muscle2) {
+.section img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -257,6 +257,43 @@ body {
     border-radius: 64px;
 }
 
+.story:not(.section3 .story){
+    animation: storyAnimOne 8s ease-in-out infinite alternate;
+    transition: all 1s ease;
+}
+
+.story:hover {
+    margin-top: 0%;
+    rotate: 0deg;
+    animation-play-state: paused;
+}
+
+@keyframes storyAnimOne {
+    0% {
+        margin-top: 2%;
+        rotate: 0deg;
+    }
+
+    25% {
+        margin-top: 0%;
+        rotate: 4deg;
+    }
+
+    50% {
+        margin-top: 2%;
+        rotate: -4deg;
+    }
+
+    75% {
+        margin-top: 2%;
+        rotate: 4deg;
+    }
+
+    100% {
+        margin-top: 2%;
+        rotate: 0deg;
+    }
+}
 .story p {
     font-family: var(--mainFont);
     font-size: clamp(0.7rem, 1.5vw, 2.8rem);
@@ -325,8 +362,21 @@ body {
     font-family: var(--mainFont);
     font-size: clamp(0.7rem, 3vw, 3rem);
     font-weight: 900;
-
+ animation: paddingMove 3s ease-in-out infinite alternate;
 }
+
+@keyframes paddingMove {
+    0% {
+        padding-left: 0;
+    }
+    50% {
+        padding-left: 20px;
+    }
+    100% {
+        padding-left: 0;
+    }
+}
+
 
 .section4 .story {
     background-color: transparent;
@@ -364,7 +414,9 @@ body {
     display: block;
 }
 
-
+.section5{
+    margin-top: 6%;
+}
 .section5 .story {
     background-color: transparent;
     border: none;
